--- a/static/global.css
+++ b/static/global.css
@@ -20,7 +20,8 @@ p {
   font-weight: 400;
   line-height: 1.2;
 }
-div, section {
+div,
+section {
   box-sizing: border-box;
 }
 a {
@@ -57,43 +58,19 @@ h1 {
   line-height: 1;
   font-weight: 700;
   margin-bottom: 40px;
+  border-left: 4px solid var(--red);
+  padding-left: 22px;
 }
 
-h2 {
-  font-weight: 700;
-  color: var(--dark-gray);
-  font-size: 24px;
-  line-height: 1;
-  margin-bottom: 40px;
-}
-h2:after {
-  content: '';
-  width: 80px;
-  height: 4px;
-  background-color: var(--red);
-  display: block;
-  margin-top: 16px;
-}
-h2 span {
-  opacity: 0.6;
-}
 @media only screen and (min-width: 480px) {
   h1 {
     font-size: 48px;
-    margin-bottom: 60px;
-  }
-  h2 {
-    font-size: 36px;
     margin-bottom: 60px;
   }
 }
 
 @media only screen and (min-width: 960px) {
   h1 {
-    margin-bottom: 90px;
-  }
-  h2 {
-    margin-bottom: 40px;
+    margin-bottom: 60px;
   }
 }
-
